[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = []

[tool.poetry]
authors = ["Fausto Morales <faustomorales@gmail.com>"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
description = "Yet another data labeling tool"
homepage = "https://github.com/faustomorales/qsl"
license = "MIT"
name = "qsl"
readme = "README.md"
repository = "https://github.com/faustomorales/qsl"
# Placeholder for poetry-dynamic-versioning
version = "0.0.0"
include = ["qsl/frontend/**/*", "qsl/jupyter/assets/**/*"]

# See https://python-poetry.org/docs/versions/ for allowed version specification formats
[tool.poetry.dependencies]
python = ">=3.6.9,<4.0"
fastapi = "*"
uvicorn = {version = "*", extras = ["standard"]}
click = "*"
aiofiles = "*"
filetype = "*"
async-exit-stack = "*"
async_generator = "*"
boto3 = "*"
SQLAlchemy = "*"
Authlib = "*"
itsdangerous = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
black = "*"
uvloop = "^0.14.0"
coverage = {version = "*", extras = ["toml"]}
mypy = "*"
pytest = "^6.1"
pylint = "*"
pytest-cov = "*"
sqlalchemy-stubs = "^0.4"
jupyterlab = "^3.0.7"
boto3-stubs = {extras = ["essential"], version = "^1.17.16"}
types-setuptools = "^57.0.2"
types-click = "^7.1.5"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.pytest.ini_options]
addopts = "--cov=qsl --cov-report=term-missing"
filterwarnings = []

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-module-docstring",
    "invalid-name",
    "attribute-defined-outside-init",
    "too-many-locals",
    "too-many-arguments",
    "too-many-branches",
    "too-many-statements",
    "too-few-public-methods",
    "missing-class-docstring"
]
extension-pkg-whitelist = []

[scripts]
qsl = "qsl.cli:cli"

[tool.poetry.scripts]
qsl = "qsl.cli:cli"
