[bdist_wheel]
universal=1

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE

[mypy]
plugins = sqlmypy

[mypy-traitlets.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-botocore.*]
ignore_missing_imports = True

[mypy-ipywidgets.*]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov=qsl --cov-report=term-missing

[pylint]
disable =
    line-too-long
    missing-module-docstring
    invalid-name
    attribute-defined-outside-init
    too-many-locals
    too-many-arguments
    too-many-branches
    too-many-statements
    too-few-public-methods
    missing-class-docstring
