[bdist_wheel]
universal=1

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Jupyter
url = https://github.com/faustomorales/qsl
author = Fausto Morales
author_email = fausto@robinbay.com

[options]
packages = find:
include_package_data = True
install_requires =
    ipywidgets>=7.0.0
    typing_extensions

[mypy]
plugins = sqlmypy

[mypy-traitlets.*]
ignore_missing_imports = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-botocore.*]
ignore_missing_imports = True

[mypy-ipywidgets.*]
ignore_missing_imports = True

[mypy-cv2.*]
ignore_missing_imports = True

[tool:pytest]
addopts = --cov=qsl --cov-report=term-missing

[pylint.messages control]
disable =
    line-too-long,
    missing-module-docstring,
    invalid-name,
    attribute-defined-outside-init,
    too-many-locals,
    too-many-arguments,
    too-many-branches,
    too-many-statements,
    too-few-public-methods,
    missing-class-docstring,
    too-many-instance-attributes
