# You must change these to your own details.
[package]
name = "qslwidgets-wasmtools"
description = "Optimized operations for the QSL library."
version = "0.1.0"
authors = ["Fasto Morales <faustomorales@gmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true
opt-level = "z"

[dependencies]
js-sys = "0.3.22"
itertools = "0.10.3"
queues = "1.1.0"
serde-wasm-bindgen = "0.5"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.101"

[dependencies.serde]
version = "1.0.139"
features = ["std", "derive"]

